--- a/media-plus/audio.html
+++ b/media-plus/audio.html
@@ -22,4 +22,18 @@
 	<div class='cr-audio-button-5'></div>
 	<div class='cr-audio-button-6'></div>
 	<div class='cr-audio-button-7'></div>
+	<div class='cr-audio-composition'>
+		<span class='cr-audio-artist'></span>.&nbsp;
+		<span class='cr-audio-album'></span>.&nbsp;
+		<span class='cr-audio-title'></span> 
+	</div>
+	<div class='cr-audio-playlist'>
+		<ul></ul>
+	</div>	
+	<div class='cr-audio-cover'>
+		<img src='media-plus/img/cover-stub.png'>
+	</div>
+	<div class='cr-audio-time'>00:00/00:00</div>
+	<div class='barGauge_container cr-audio-gauge'></div>
+</div>
 </div>
