--- a/media-plus/audio.html
+++ b/media-plus/audio.html
@@ -34,6 +34,8 @@
 		<img src='media-plus/img/cover-stub.png'>
 	</div>
 	<div class='cr-audio-time'>00:00/00:00</div>
-	<div class='barGauge_container cr-audio-gauge'></div>
+	<div class='cr-audio-gauge'>
+		<div class='barGauge_container'>&nbsp;</div>
+	</div>
 </div>
 </div>
