--- a/media-plus/audio.html
+++ b/media-plus/audio.html
@@ -37,5 +37,7 @@
 	<div class='cr-audio-gauge'>
 		<div class='barGauge_container'>&nbsp;</div>
 	</div>
+	<div class='cr-icones-my-audio'></div>
+	<div class='cr-icones-my-video'></div>
 </div>
 </div>
