--- a/media-plus/audio.html
+++ b/media-plus/audio.html
@@ -11,17 +11,11 @@
 	<div class='cr-audio-button-mute'></div>
 	<div class='cr-audio-button-volumeup'></div>
 	<div class='cr-audio-button-volumedown'></div>
-	<div class='cr-audio-button-forward'></div>
 	<div class='cr-audio-button-previous'></div>
-	<div class='cr-audio-button-back'></div>
+	<div class='cr-audio-button-rewind'></div>
+	<div class='cr-audio-button-forward'></div>
 	<div class='cr-audio-button-next'></div>
-	<div class='cr-audio-button-1'></div>
-	<div class='cr-audio-button-2'></div>
-	<div class='cr-audio-button-3'></div>
-	<div class='cr-audio-button-4'></div>
-	<div class='cr-audio-button-5'></div>
-	<div class='cr-audio-button-6'></div>
-	<div class='cr-audio-button-7'></div>
+	<div class='cr-audio-button-back'></div>
 	<div class='cr-audio-composition'>
 		<span class='cr-audio-artist'></span>.&nbsp;
 		<span class='cr-audio-album'></span>.&nbsp;
@@ -31,7 +25,7 @@
 		<ul></ul>
 	</div>	
 	<div class='cr-audio-cover'>
-		<img src='media-plus/img/cover-stub.png'>
+		<img src='media-plus/img/cover-stub.png' onerror='this.src="media-plus/img/cover-stub.png"'>
 	</div>
 	<div class='cr-audio-time'>00:00/00:00</div>
 	<div class='cr-audio-gauge'>
