--- a/media-plus/audio.html
+++ b/media-plus/audio.html
@@ -1,21 +1,24 @@
 <div class='cr-media-audio'>
-	<div class='cr-audio-button-power'></div>
-	<div class='cr-audio-button-play'></div>
-	<div class='cr-audio-button-pause'></div>
-	<div class='cr-audio-button-stop'></div>
-	<div class='cr-audio-button-ok'></div>
+	<div class='cr-audio-button-power cr-audio-button'></div>
+	<div class='cr-audio-button-play cr-audio-button'></div>
+	<div class='cr-audio-button-pause cr-audio-button'></div>
+	<div class='cr-audio-button-stop cr-audio-button'></div>
+	<div class='cr-audio-button-previous cr-audio-button'></div>
+	<div class='cr-audio-button-rewind cr-audio-button'></div>
+	<div class='cr-audio-button-forward cr-audio-button'></div>
+	<div class='cr-audio-button-next cr-audio-button'></div>
+	<div class='cr-audio-button-back cr-audio-button'></div>
+
+	<div class='cr-audio-button-mute'></div>
+	<div class='cr-audio-button-volumeup cr-audio-button-vol'></div>
+	<div class='cr-audio-button-volumedown cr-audio-button-vol'></div>
+
+	<div class='cr-audio-button-ok cr-audio-button'></div>
 	<div class='cr-audio-button-up'></div>
 	<div class='cr-audio-button-down'></div>
 	<div class='cr-audio-button-right'></div>
 	<div class='cr-audio-button-left'></div>
-	<div class='cr-audio-button-mute'></div>
-	<div class='cr-audio-button-volumeup'></div>
-	<div class='cr-audio-button-volumedown'></div>
-	<div class='cr-audio-button-previous'></div>
-	<div class='cr-audio-button-rewind'></div>
-	<div class='cr-audio-button-forward'></div>
-	<div class='cr-audio-button-next'></div>
-	<div class='cr-audio-button-back'></div>
+
 	<div class='cr-audio-composition'>
 		<span class='cr-audio-artist'></span>.&nbsp;
 		<span class='cr-audio-album'></span>.&nbsp;
@@ -31,7 +34,9 @@
 	<div class='cr-audio-gauge'>
 		<div class='barGauge_container'>&nbsp;</div>
 	</div>
-	<div class='cr-icones-my-audio'></div>
-	<div class='cr-icones-my-video'></div>
-</div>
+	<div class='cr-audio-volume'></div>
+	<div class='cr-icones-collection-movie'></div>
+	<div class='cr-icones-collection-video'></div>
+	<div class='cr-icones-collection-audio'></div>
+	<div class='cr-icones-collection-photo'></div>
 </div>
