--- a/media-plus/audio.html
+++ b/media-plus/audio.html
@@ -20,8 +20,10 @@
 	<div class='cr-audio-button-left'></div>
 
 	<div class='cr-audio-composition'>
-		<span class='cr-audio-artist'></span>.&nbsp;
-		<span class='cr-audio-album'></span>.&nbsp;
+		<span class='cr-audio-artist'></span>
+		<span class='cr-audio-dot1'>.&nbsp;</span>
+		<span class='cr-audio-album'></span>
+		<span class='cr-audio-dot2'>.&nbsp;</span>
 		<span class='cr-audio-title'></span> 
 	</div>
 	<div class='cr-audio-playlist'>
