--- a/media-plus/audio.html
+++ b/media-plus/audio.html
@@ -1,44 +1,67 @@
 <div class='cr-media-audio'>
-	<div class='cr-audio-button-power cr-audio-button'></div>
-	<div class='cr-audio-button-play cr-audio-button'></div>
-	<div class='cr-audio-button-pause cr-audio-button'></div>
-	<div class='cr-audio-button-stop cr-audio-button'></div>
-	<div class='cr-audio-button-previous cr-audio-button'></div>
-	<div class='cr-audio-button-rewind cr-audio-button'></div>
-	<div class='cr-audio-button-forward cr-audio-button'></div>
-	<div class='cr-audio-button-next cr-audio-button'></div>
-	<div class='cr-audio-button-back cr-audio-button'></div>
+
+	<div class='cr-icones-collection-movie'><span>ФИЛЬМЫ</span></div>
+	<div class='cr-icones-collection-video'><span>ВИДЕО</span></div>
+	<div class='cr-icones-collection-audio'><span>АУДИО</span></div>
+	<div class='cr-icones-collection-photo'><span>ФОТО</span></div>
+
+	<div class='cr-volume-slider-wrap cr-volume-slider-wrap-audio'></div>
+	<div class='cr-volume-scale-wrap  cr-volume-scale-wrap-audio'></div>
+
+	<div class='cr-audio-button-power'></div>
+	<div class='cr-audio-button-play'></div>
+	<div class='cr-audio-button-pause'></div>
+	<div class='cr-audio-button-stop'></div>
+
+	<div class='cr-audio-button-previous'></div>
+	<div class='cr-audio-button-rewind'></div>
+	<div class='cr-audio-button-forward'></div>
+	<div class='cr-audio-button-next'></div>
 
 	<div class='cr-audio-button-mute'></div>
-	<div class='cr-audio-button-volumeup cr-audio-button-vol'></div>
-	<div class='cr-audio-button-volumedown cr-audio-button-vol'></div>
+	<div class='cr-audio-button-reset'></div>
+	<div class='cr-audio-button-menu'>МЕНЮ</div>
 
-	<div class='cr-audio-button-ok cr-audio-button'></div>
-	<div class='cr-audio-button-up'></div>
-	<div class='cr-audio-button-down'></div>
-	<div class='cr-audio-button-right'></div>
-	<div class='cr-audio-button-left'></div>
+	<div class='cr-audio-button-previous-mini'></div>
+	<div class='cr-audio-button-pause-mini'></div>
+	<div class='cr-audio-button-stop-mini'></div>
+	<div class='cr-audio-button-next-mini'></div>
 
-	<div class='cr-audio-composition'>
-		<span class='cr-audio-artist'></span>
-		<span class='cr-audio-dot1'>.&nbsp;</span>
-		<span class='cr-audio-album'></span>
-		<span class='cr-audio-dot2'>.&nbsp;</span>
-		<span class='cr-audio-title'></span> 
+	<div class='cr-audio-joystick'>
+		<div class='cr-audio-joystick-up'></div>
+		<div class='cr-audio-joystick-left'></div>
+		<div class='cr-audio-joystick-ok'></div>
+		<div class='cr-audio-joystick-right'></div>
+		<div class='cr-audio-joystick-down'></div>
 	</div>
-	<div class='cr-audio-playlist'>
-		<ul></ul>
-	</div>	
-	<div class='cr-audio-cover'>
-		<img src='media-plus/img/cover-stub.png' onerror='this.src="media-plus/img/cover-stub.png"'>
-	</div>
-	<div class='cr-audio-time'>00:00/00:00</div>
+
 	<div class='cr-audio-gauge'>
 		<div class='barGauge_container'>&nbsp;</div>
 	</div>
-	<div class='cr-audio-volume'></div>
-	<div class='cr-icones-collection-movie'></div>
-	<div class='cr-icones-collection-video'></div>
-	<div class='cr-icones-collection-audio'></div>
-	<div class='cr-icones-collection-photo'></div>
+
+	<div class='cr-audio-composition'>
+		<span class='cr-audio-artist'>Eric Clapton</span>
+		<span class='cr-audio-dot'>.&nbsp;</span>
+		<span class='cr-audio-album'>Back Home</span>
+		<span class='cr-audio-dot'>.&nbsp;</span>
+		<span class='cr-audio-title'>So Tired</span> 
+		<span class='cr-audio-dot'>.&nbsp;</span>
+	</div>
+
+	<div class='cr-audio-time'>00:00/00:00</div>
+
+	<div class='cr-audio-cover'>
+		<img src='media-plus/img/cover-stub.png' onerror='this.src="media-plus/img/cover-stub.png"'>
+	</div>
+
+	<div class='cr-audio-playlist'>
+		<ol></ol>
+	</div>
+	<div class='cr-audio-filelist'>
+		<ol></ol>
+	</div>
+
+<!--
+
+-->
 </div>
